[gd_scene load_steps=4 format=3 uid="uid://piw86mmtixt8"]

[ext_resource type="Script" path="res://networking.gd" id="1_bd0yp"]
[ext_resource type="Script" path="res://RemoteLabel.gd" id="2_md2fd"]
[ext_resource type="Script" path="res://RemoteLabel2.gd" id="2_ulltd"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayersDisplay" type="Label" parent="Game"]
layout_mode = 2
offset_left = 4.0
offset_top = 111.0
offset_right = 145.0
offset_bottom = 134.0
text = "Players:
"
script = ExtResource("2_ulltd")

[node name="Label" type="Label" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_right = 5.644
anchor_bottom = 4.051
offset_right = -164.76
offset_bottom = -139.04
text = "Value: 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_md2fd")

[node name="PanelContainer" type="PanelContainer" parent="Game"]
layout_mode = 1
anchors_preset = -1
anchor_right = 3.525
anchor_bottom = 1.95
offset_left = 6.0
offset_top = 27.0
offset_right = 6.0
offset_bottom = 27.0

[node name="HBoxContainer" type="HBoxContainer" parent="Game/PanelContainer"]
layout_mode = 2

[node name="Increment" type="Button" parent="Game/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="Decrement" type="Button" parent="Game/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="HostMenu" type="Control" parent="."]
anchors_preset = 0
offset_left = 24.0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 114.0
script = ExtResource("1_bd0yp")

[node name="PanelContainer" type="PanelContainer" parent="HostMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -7.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HostMenu/PanelContainer"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="HostMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HostButton" type="Button" parent="HostMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="IPAddress" type="LineEdit" parent="HostMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "localhost"

[node name="JoinButton" type="Button" parent="HostMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="Spacer" type="Control" parent="HostMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Game/PanelContainer/HBoxContainer/Increment" to="Game/Label" method="_on_increment_pressed"]
[connection signal="pressed" from="Game/PanelContainer/HBoxContainer/Decrement" to="Game/Label" method="_on_decrement_pressed"]
[connection signal="pressed" from="HostMenu/PanelContainer/VBoxContainer/HostButton" to="HostMenu" method="_on_host_button_pressed"]
[connection signal="pressed" from="HostMenu/PanelContainer/VBoxContainer/JoinButton" to="HostMenu" method="_on_join_button_pressed"]
